added close button to panel, added no new items message to panel

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -10,7 +10,7 @@ credentialsError=can't find credentials, check password manager or login manuall
 invalidUrl=wrong url, check settings
 
 unreadItems=%d unread items
-noItems=no items
+noItems=no new items
 moreCount=and %d more...
 
 unreadPopup[one]=%d new unread
