added some messages

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -3,8 +3,10 @@ updating=updating
 
 lastUpdated=updated %s
 neverUpdated=never updated
+inProgress=update in progress...
 
 updateError=update error
+jsonError=JSON parsing error
 authError=can't login, check password manager or login manually
 credentialsError=can't find credentials, check password manager or login manually
 invalidUrl=wrong url, check settings
