--- a/locale/ru-RU.properties
+++ b/locale/ru-RU.properties
@@ -3,8 +3,10 @@ updating=обновляется
 
 lastUpdated=обновлено %s
 neverUpdated=никогда не обновлялось
+inProgress=обновление в процессе...
 
 updateError=ошибка обновления
+jsonError=ошибка обработки JSON
 authError=ошибка входа, проверьте менеджер паролей или зайдите самостоятельно
 credentialsError=имя пользователя и пароль не найдены, проверьте менеджер паролей или зайдите самостоятельно
 invalidUrl=неверная ссылка на selfoss, проверьте настройки
